--- a/web/.env
+++ b/web/.env
@@ -6,9 +6,9 @@ BD_HOST=127.0.0.1
 BD_PORT=3306
 
 CORREO_HOST=sandbox.smtp.mailtrap.io
-CORREO_sPORT=2525
-CORREO_USER=cf1162ed9f291e
-CORREO_PASS=1daa77b65d85c0
+CORREO_PORT=2525
+CORREO_USER=45a056e99957b1
+CORREO_PASS=7320223ab29d60
 
 URL_BACKEND= http://localhost
 
